--- a/myproject/templates/app/base.html
+++ b/myproject/templates/app/base.html
@@ -46,6 +46,7 @@
     </div>
 </body>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/formValidation.js' %}"></script>
 
 <footer class="bg-light text-center text-lg-start mt-5">
     <!-- Copyright -->
